--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         integrity="sha512-apX8rFN/KxJW8rniQbkvzrshQ3KvyEH+4szT3Sno5svdr6E/CP0QE862yEeLBMUnCqLko8QaugGkzvWS7uNfFQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel = "icon" href = 
+"./resources/images/logo.png" 
+        type = "image/x-icon">
     <title>Portfolio</title>
 </head>
 
