--- a/index.html
+++ b/index.html
@@ -1384,6 +1384,63 @@
                     </div>
             </div>
         </div>
+
+
+
+
+        <section class="contact"  id="contact">
+            <div class="contact_content">
+                <h2>Feedback</h2>
+                <p>Your Feedback is imp! to us if this PORTFOLIO need any kind of update kindely give us a message what it should be we are glad to listen from u......</p>
+            </div>
+            <div class="detailsc">
+                <div class="contactinfo">
+                    <div class="box">
+                        <div class="icon"><i class="fa fa-map-marker" ></i></div>
+                            <div class="text">
+                                <h3>Address</h3>
+                                <p>Basti, UP<br>Rafeeq Nagar Belwadandhi<br>272001</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="icon"><i class="fa fa-phone" ></i> </div>
+                            <div class="text">
+                                <h3>Phone </h3>
+                                <p>7007136187</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="icon"><i class="fa fa-envelope" ></i></div>
+                            <div class="text">
+                                <h3>Email</h3>
+                                <p>atifmoin52@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="contactForm" id="feed">
+                    <form method="post" action="./php/backend_form.php">
+                        <h2>Send Message</h2>
+                        <div class="inputbox">
+                            <input type="text" name="name" required="required">
+                            <span>Full Name</span>
+                        </div>
+                        <div class="inputbox">
+                            <input type="email" name="email" required="required">
+                            <span>Email</span>
+                        </div>
+                        <div class="inputbox">
+                            <textarea name="message" required="required"></textarea>
+                            <span>Type your Message...</span>
+                        </div>
+                        <div class="inputbox">
+                            <input type="submit" name="" value="Send">
+        
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+
     </content>
 
 </body>
