--- a/index.html
+++ b/index.html
@@ -1418,7 +1418,7 @@
                     </div>
                 </div>
                 <div class="contactForm" id="feed">
-                    <form method="post" action="./php/backend_form.php">
+                    <form method="POST" action="./php/backend_form.php">
                         <h2>Send Message</h2>
                         <div class="inputbox">
                             <input type="text" name="name" required="required">
