--- a/index.html
+++ b/index.html
@@ -1421,19 +1421,19 @@
                     <form method="POST" action="./php/backend_form.php">
                         <h2>Send Message</h2>
                         <div class="inputbox">
-                            <input type="text" name="name" required="required">
+                            <input type="text" name="name">
                             <span>Full Name</span>
                         </div>
                         <div class="inputbox">
-                            <input type="email" name="email" required="required">
+                            <input type="email" name="email">
                             <span>Email</span>
                         </div>
                         <div class="inputbox">
-                            <textarea name="message" required="required"></textarea>
+                            <textarea name="message"></textarea>
                             <span>Type your Message...</span>
                         </div>
                         <div class="inputbox">
-                            <input type="submit" name="" value="Send">
+                            <input type="submit" name="sentbtn" value="Send">
         
                         </div>
                     </form>
