--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="#about">About</a>
                     <a href="#projects">Projects</a>
                     <a href="#Feedback">Feedback</a>
-                    <a href="#Contact">Contact</a>
+                    <a href="#resume">My Resume</a>
                 </div>
             </div>
 
@@ -1441,6 +1441,26 @@
             </div>
         </section>
 
+        <section class="My_Resume">
+<div class="card2">
+<div class="imagecard2">
+    <img src="./resources/images/res.jpg" alt="">
+</div>
+<div class="buttons">
+    <a href="./resources/pdf/resume.pdf" target="_blank">
+<div class="view btn" >
+    <i class="fa fa-eye" aria-hidden="true"></i>  View
+</div>
+</a>
+<a href="https://doc-0c-00-docs.googleusercontent.com/docs/securesc/577jud4h551hav5uvupn2f1bc1sofhvd/so12c965a0qf2m9a5i6a44dr9ndfabg7/1627984575000/03051289586766108612/03051289586766108612/1GAjDBihnB-u_CNZchESN-6_zxLzlzscu?e=download&authuser=0&nonce=bjcf19f70jg10&user=03051289586766108612&hash=9snciqvffe81007e4adu0obibqlhb09o">
+<div class="download btn">
+    <i class="fa fa-download" aria-hidden="true"></i>  Download
+</div>
+</a>
+</div>
+</div>
+
+        </section>
     </content>
 
 </body>
