--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="#about">About</a>
                     <a href="#projects">Projects</a>
                     <a href="#Feedback">Feedback</a>
-                    <a href="#resume">My Resume</a>
+                    <a href="#My_Resume">My Resume</a>
                 </div>
             </div>
 
@@ -1441,7 +1441,7 @@
             </div>
         </section>
 
-        <section class="My_Resume">
+        <section class="My_Resume" id="My_Resume">
 <div class="card2">
 <div class="imagecard2">
     <img src="./resources/images/res.jpg" alt="">
