Chnages in resume

--- a/index.html
+++ b/index.html
@@ -1444,12 +1444,12 @@
                     <img src="./resources/images/res.png" alt="">
                 </div>
                 <div class="buttons">
-                    <a href="./resources/pdf/resume.pdf" target="_blank">
+                    <a href="https://drive.google.com/file/d/1yl2AHKNJa1tKK8WcYO4gktKqCR0tPPFD/view?usp=sharing" target="_blank">
                         <div class="view btn">
                             <i class="fa fa-eye" aria-hidden="true"></i> View
                         </div>
                     </a>
-                    <a href="https://atifmoin19.github.io/PORTFOLIO/resources/pdf/resume.pdf">
+                    <a href="https://drive.google.com/file/d/1yl2AHKNJa1tKK8WcYO4gktKqCR0tPPFD/view?usp=sharing">
                         <div class="download btn">
                             <i class="fa fa-download" aria-hidden="true"></i> Download
                         </div>
